[package]
name = "sync-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
futures-util = "0.3.31"
matrix-sdk = { path = "matrix-rust-sdk/crates/matrix-sdk" }
matrix-sdk-ui = { path = "matrix-rust-sdk/crates/matrix-sdk-ui" }
simple_logger = "5.0.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
